--- a/utilities.html
+++ b/utilities.html
@@ -37,7 +37,7 @@
                   <a href="index.html" style="margin: auto;" target="_blank">Return To Menu</a>
                   <hr>
                   <h6>Welcome To A-Tech #CyberSecurity</h6>
-                  <h4><em style="color: red;">Browse</em> Our Hacking Library</h4> 
+                  <h4><em style="color: red;">Browse</em> Our Hacking Library</h4>
                 </div>
               </div>
             </div>
@@ -52,37 +52,37 @@
                 <div class="row">
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/K.png" alt="">
+                      <img src="assets/images/K (12).png" alt="">
                       <h4><br><span></span></h4>
                     <div class="main-button">
-                      <a href="https://osintframework.com" target="_blank">Launch</a> <p style="color: red;">Osint Framework</p>
+                      <a href="https://ping.eu" target="_blank">Launch</a> <p style="color: red;">Ping EU</p>
                     </div>
                     </div>
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/K (1).png" alt="">
+                      <img src="assets/images/K (13).png" alt="">
                       <h4><br><span></span></h4>
                       <div class="main-button">
-                      <a href="https://www.exploit-db.com/google-hacking-database" target="blank">Launch</a> <p style="color: red;">Google DB</p>
+                      <a href="https://nmap.online" target="blank">Launch</a> <p style="color: red;">Nmap Online</p>
                     </div>
                     </div>
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/K (2).png" alt="">
+                      <img src="assets/images/K (14).png" alt="">
                       <h4><br><span></span></h4>
                      <div class="main-button">
-                      <a href="https://securitytrails.com" target="_blank" >Launch</a> <p style="color: red;">Security Trails</p>
+                      <a href="https://portswigger.net/burp" target="_blank" >Launch</a> <p style="color: red;">portswigger</p>
                     </div>
                     </div>
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/K (3).png" alt="">
+                      <img src="assets/images/K (15).png" alt="">
                       <h4><br><span></span></h4>
                       <div class="main-button">
-                      <a href="https://bgpview.io" target="_blank">Launch</a> <p style="color: red;">BGP</p>
+                      <a href="https://hostedscan.com/owasp-vulnerability-scan" target="_blank">Launch</a> <p style="color: red;">Owasp ZAP Online</p>
                     </div>
                     </div>
                   </div>
@@ -184,3 +184,4 @@
   </body>
 
 </html>
+
