--- a/osint.html
+++ b/osint.html
@@ -45,124 +45,136 @@
           <!-- ***** Banner End ***** -->
 
 
-          <!-- ***** Gaming Library Start ***** -->
-          <div class="most-popular">
-            <div class="row">
-              <div class="col-lg-12">
-                <div class="row">
-                  <div class="col-lg-3 col-sm-6">
-                    <div class="item">
-                      <img src="assets/images/K.png" alt="">
-                      <h4><br><span></span></h4>
-                    <div class="main-button">
-                      <a href="https://osintframework.com" target="_blank">Launch</a> <p style="color: red;">Osint Framework</p>
+            <!-- ***** Gaming Library Start ***** -->
+            <div class="most-popular">
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="row">
+                    <div class="col-lg-3 col-sm-6">
+                      <div class="item text-center">
+                        <img src="assets/images/K.png" alt="">
+                        <h4><br><span></span></h4>
+                        <div class="main-button">
+                          <a href="https://osintframework.com" target="_blank">Launch</a>
+                          <p style="color: red;">Osint Framework</p>
+                        </div>
+                      </div>
                     </div>
+                    <div class="col-lg-3 col-sm-6">
+                      <div class="item text-center">
+                        <img src="assets/images/K (1).png" alt="">
+                        <h4><br><span></span></h4>
+                        <div class="main-button">
+                          <a href="https://www.exploit-db.com/google-hacking-database" target="blank">Launch</a>
+                          <p style="color: red;">Google DB</p>
+                        </div>
+                      </div>
                     </div>
-                  </div>
-                  <div class="col-lg-3 col-sm-6">
-                    <div class="item">
-                      <img src="assets/images/K (1).png" alt="">
-                      <h4><br><span></span></h4>
-                      <div class="main-button">
-                      <a href="https://www.exploit-db.com/google-hacking-database" target="blank">Launch</a> <p style="color: red;">Google DB</p>
+                    <div class="col-lg-3 col-sm-6">
+                      <div class="item text-center">
+                        <img src="assets/images/K (2).png" alt="">
+                        <h4><br><span></span></h4>
+                        <div class="main-button">
+                          <a href="https://securitytrails.com" target="_blank">Launch</a>
+                          <p style="color: red;">Security Trails</p>
+                        </div>
+                      </div>
                     </div>
+                    <div class="col-lg-3 col-sm-6">
+                      <div class="item text-center">
+                        <img src="assets/images/K (3).png" alt="">
+                        <h4><br><span></span></h4>
+                        <div class="main-button">
+                          <a href="https://bgpview.io" target="_blank">Launch</a>
+                          <p style="color: red;">BGP</p>
+                        </div>
+                      </div>
                     </div>
-                  </div>
-                  <div class="col-lg-3 col-sm-6">
-                    <div class="item">
-                      <img src="assets/images/K (2).png" alt="">
-                      <h4><br><span></span></h4>
-                     <div class="main-button">
-                      <a href="https://securitytrails.com" target="_blank" >Launch</a> <p style="color: red;">Security Trails</p>
+                    <div class="col-lg-3 col-sm-6">
+                      <div class="item text-center">
+                        <img src="assets/images/K (4).png" alt="">
+                        <h4><br><span></span></h4>
+                        <div class="main-button">
+                          <a href="https://www.recordedfuture.com/vulnerability-database" target="_blank">Launch</a>
+                          <p style="color: red;">Recorded Future</p>
+                        </div>
+                      </div>
                     </div>
+                    <div class="col-lg-3 col-sm-6">
+                      <div class="item text-center">
+                        <img src="assets/images/K (5).png" alt="">
+                        <h4><br><span></span></h4>
+                        <div class="main-button">
+                          <a href="https://tria.ge" target="_blank">Launch</a>
+                          <p style="color: red;">Tri.age</p>
+                        </div>
+                      </div>
                     </div>
-                  </div>
-                  <div class="col-lg-3 col-sm-6">
-                    <div class="item">
-                      <img src="assets/images/K (3).png" alt="">
-                      <h4><br><span></span></h4>
-                      <div class="main-button">
-                      <a href="https://bgpview.io" target="_blank">Launch</a> <p style="color: red;">BGP</p>
+                    <div class="col-lg-3 col-sm-6">
+                      <div class="item text-center">
+                        <img src="assets/images/K (6).png" alt="">
+                        <h4><br><span></span></h4>
+                        <div class="main-button">
+                          <a href="https://pipl.com" target="_blank">Launch</a>
+                          <p style="color: red;">Pipl</p>
+                        </div>
+                      </div>
                     </div>
+                    <div class="col-lg-3 col-sm-6">
+                      <div class="item text-center">
+                        <img src="assets/images/K (7).png" alt="">
+                        <h4><br><span></span></h4>
+                        <div class="main-button">
+                          <a href="https://haveibeenpwned.com" target="_blank">Launch</a>
+                          <p style="color: red;">haveibeenpwned</p>
+                        </div>
+                      </div>
                     </div>
-                  </div>
-                  <div class="col-lg-3 col-sm-6">
-                    <div class="item">
-                      <img src="assets/images/K (4).png" alt="">
-                      <h4><br><span></span></h4>
-                    <div class="main-button">
-                      <a href="https://www.recordedfuture.com/vulnerability-database" target="_blank">Launch</a> <p style="color: red;">Recorded Future</p>
+                    <div class="col-lg-3 col-sm-6">
+                      <div class="item text-center">
+                        <img src="assets/images/K (8).png" alt="">
+                        <h4><br><span></span></h4>
+                        <div class="main-button">
+                          <a href="https://shodan.io" target="_blank">Launch</a>
+                          <p style="color: red;">Shodan</p>
+                        </div>
+                      </div>
                     </div>
+                    <div class="col-lg-3 col-sm-6">
+                      <div class="item text-center">
+                        <img src="assets/images/K (9).png" alt="">
+                        <h4><br><span></span></h4>
+                        <div class="main-button">
+                          <a href="https://intelx.io" target="_blank">Launch</a>
+                          <p style="color: red;">Intel X</p>
+                        </div>
+                      </div>
                     </div>
-                  </div>
-                  <div class="col-lg-3 col-sm-6">
-                    <div class="item">
-                      <img src="assets/images/K (5).png" alt="">
-                      <h4><br><span></span></h4>
-                      <div class="main-button">
-                      <a href="https://tria.ge" target="_blank">Launch</a> <p style="color: red;">Tri.age</p>
+                    <div class="col-lg-3 col-sm-6">
+                      <div class="item text-center">
+                        <img src="assets/images/K (10).png" alt="">
+                        <h4><br><span></span></h4>
+                        <div class="main-button">
+                          <a href="https://leak-lookup.com" target="_blank">Launch</a>
+                          <p style="color: red;">Leak Lookup</p>
+                        </div>
+                      </div>
                     </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-3 col-sm-6">
-                    <div class="item">
-                      <img src="assets/images/K (6).png" alt="">
-                      <h4><br><span></span></h4>
-                     <div class="main-button">
-                      <a href="https://pipl.com" target="_blank" ">Launch</a> <p style="color: red;">Pipl</p>
-                    </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-3 col-sm-6">
-                    <div class="item">
-                      <img src="assets/images/K (7).png" alt="">
-                      <h4><br><span></span></h4>
-                      <div class="main-button">
-                      <a href="https://haveibeenpwned.com" target="_blank" ">Launch</a> <p style="color: red;">haveibeenpwned</p>
-                    </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-3 col-sm-6">
-                    <div class="item">
-                      <img src="assets/images/K (8).png" alt="">
-                      <h4><br><span></span></h4>
-                      <div class="main-button">
-                      <a href="https://shodan.io" target="_blank" ">Launch</a> <p style="color: red;">Shodan</p>
-                    </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-3 col-sm-6">
-                    <div class="item">
-                      <img src="assets/images/K (9).png" alt="">
-                      <h4><br><span></span></h4>
-                      <div class="main-button">
-                      <a href="https://intelx.io" target="_blank" ">Launch</a> <p style="color: red;">Intel X</p>
-                    </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-3 col-sm-6">
-                    <div class="item">
-                      <img src="assets/images/K (10).png" alt="">
-                      <h4><br><span></span></h4>
-                      <div class="main-button">
-                      <a href="https://leak-lookup.com" target="_blank" ">Launch</a> <p style="color: red;">Leak Lookup</p>
-                    </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-3 col-sm-6">
-                    <div class="item">
-                      <img src="assets/images/K (11).png" alt="">
-                      <h4><br><span></span></h4>
-                      <div class="main-button">
-                      <a href="https://dehashed.com" target="_blank" ">Launch</a> <p style="color: red;">Dehashed</p>
-                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                      <div class="item text-center">
+                        <img src="assets/images/K (11).png" alt="">
+                        <h4><br><span></span></h4>
+                        <div class="main-button">
+                          <a href="https://dehashed.com" target="_blank">Launch</a>
+                          <p style="color: red;">Dehashed</p>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-          <!-- ***** Gaming Library End ***** -->
+            <!-- ***** Gaming Library End ***** -->
         </div>
       </div>
     </div>
